// [Ref: 04_全链路通信协议矩阵] 专家辩论协议
// 代码仓：diting-core/design/protocols/brain/expert.proto

syntax = "proto3";

package diting.brain;

enum ExpertDomain {
  DOMAIN_UNSPECIFIED = 0;
  DOMAIN_AGRI = 1;
  DOMAIN_TECH = 2;
  DOMAIN_MACRO = 3;
  DOMAIN_QUANT = 4;
}

enum TimeHorizon {
  TIME_HORIZON_UNSPECIFIED = 0;
  SHORT_TERM = 1;
  LONG_TERM = 2;
}

message ExpertOpinion {
  string symbol = 1;
  ExpertDomain domain = 2;
  bool is_supported = 3;
  enum SignalType {
    SIGNAL_NEUTRAL = 0;
    SIGNAL_BULLISH = 1;
    SIGNAL_BEARISH = 2;
  }
  SignalType direction = 4;
  double confidence = 5;
  string reasoning_summary = 6;
  repeated string risk_factors = 7;
  int64 timestamp = 8;
  TimeHorizon horizon = 9;
}
